--- a/Venkat Résumé.tex
+++ b/Venkat Résumé.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{practical-cv}
+\documentclass[a4paper]{practical-resume}
 
 % Bibliography file
 \addbibresource{bibliography.bib}
