resume first nice draft

--- a/Venkat Résumé.tex
+++ b/Venkat Résumé.tex
@@ -16,7 +16,7 @@
 \makecvtitle
 
 \section{Personal Statement}
-\input{sections/work_interests.tex}
+\input{sections/personal_statement.tex}
 
 \section{Education}
 \input{sections/education.tex}
