--- a/sections/personal_statement.tex
+++ b/sections/personal_statement.tex
@@ -1,2 +1,2 @@
-I am a Ph.D. candidate in Computational Linguistics at UT Austin researching intergroup bias in online communication. I have 5+ years of experience in data science, machine learning, and modern NLP including large language models. I'm interested in roles at the intersection of engineering, data science, and machine learning, with a \emph{start date in June 2024}.
+I am a Ph.D. candidate in Computational Linguistics at UT Austin researching intergroup bias in online communication. I have 5+ years of experience in data science, machine learning, and modern NLP including large language models. I'm interested in roles at the intersection of \textbf{engineering, data science, and machine learning}, with a \emph{start date in June 2024}.
 
