bibliography is separate from CV and only has select publications

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -24,7 +24,7 @@
 \section{Work Experience}
 \input{sections/work_experience.tex}
 
-\printbibliography[title=Select Publications, keyword=resume]
+\printbibliography[title=Select Publications]
 
 \section{Skills}
 \input{sections/skills.tex}
