removed personal address

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -5,7 +5,7 @@
 
 % personal data
 \name{Venkata\space S}{Govindarajan}
-\title{He/Him/His\\4550 Avenue A, Apt 203\\Austin TX 78751}
+\title{He/Him/His\\Department of Linguistics,\\The University of Texas at Austin}
 \email{gvenkata1994@gmail.com}
 \phone{(512)568-8775}
 \github{venkatasg}
