updated to use authoryear style

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,5 @@
 @inproceedings{govindarajan-etal-2023-counterfactual,
-    title = "Counterfactual Probing for the Influence of Affect and Specificity on Intergroup Bias",
+    title = "\href{https://aclanthology.org/2023.findings-acl.813}{Counterfactual Probing for the Influence of Affect and Specificity on Intergroup Bias}",
     author = "Govindarajan, Venkata Subrahmanyan  and
       Beaver, David  and
       Mahowald, Kyle  and
@@ -16,7 +16,7 @@
 }
 
 @inproceedings{govindarajan-etal-2023-people,
-    title = "How people talk about each other: Modeling Generalized Intergroup Bias and Emotion",
+    title = "\href{https://aclanthology.org/2023.eacl-main.183}{How people talk about each other: Modeling Generalized Intergroup Bias and Emotion}",
     author = "Govindarajan, Venkata Subrahmanyan  and
       Atwell, Katherine  and
       Sinno, Barea  and
