reworked personal statement, reduced awards

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -29,6 +29,9 @@
 \section{Skills}
 \input{sections/skills.tex}
 
+\section{Relevant Coursework}
+\input{sections/coursework.tex}
+
 \section{Apps}
 \input{sections/apps.tex}
 
