Reduced bib content, margins, letter paper,

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{practical-resume}
+\documentclass[letterpaper]{practical-resume}
 
 % Bibliography file
 \addbibresource{bibliography.bib}
@@ -21,7 +21,7 @@
 \section{Education}
 \input{sections/education.tex}
 
-\section{Work Experience}
+\section{Employment}
 \input{sections/work_experience.tex}
 
 \printbibliography[title=Select Publications]
