--- a/bibliography.bib
+++ b/bibliography.bib
@@ -15,14 +15,11 @@
       Mahowald, Kyle  and
       Li, Junyi Jessy",
     author+an = {1=highlight},
-    booktitle = "Findings of the Association for Computational Linguistics: ACL 2023",
+    booktitle = "Findings of the ACL: ACL 2023",
     month = jul,
     year = "2023",
     address = "Toronto, Canada",
-    publisher = "Association for Computational Linguistics",
     url = "https://aclanthology.org/2023.findings-acl.813",
-    pages = "12853--12862",
-    abstract = "While existing work on studying bias in NLP focues on negative or pejorative language use, Govindarajan et al. (2023) offer a revised framing of bias in terms of intergroup social context, and its effects on language behavior. In this paper, we investigate if two pragmatic features (specificity and affect) systematically vary in different intergroup contexts {---} thus connecting this new framing of bias to language output. Preliminary analysis finds modest correlations between specificity and affect of tweets with supervised intergroup relationship (IGR) labels. Counterfactual probing further reveals that while neural models finetuned for predicting IGR reliably use affect in classification, the model{'}s usage of specificity is inconclusive."
 }
 
 @inproceedings{govindarajan-etal-2023-people,
@@ -34,14 +31,11 @@
       Beaver, David  and
       Li, Junyi Jessy",
     author+an = {1=highlight},
-    booktitle = "Proceedings of the 17th Conference of the European Chapter of the Association for Computational Linguistics",
+    booktitle = "Proceedings of the 17th Conference of the European Chapter of the ACL (EACL 2023)",
     month = may,
     year = "2023",
     address = "Dubrovnik, Croatia",
-    publisher = "Association for Computational Linguistics",
-    url = "https://aclanthology.org/2023.eacl-main.183",
-    pages = "2488--2498",
-    abstract = "Current studies of bias in NLP rely mainly on identifying (unwanted or negative) bias towards a specific demographic group. While this has led to progress recognizing and mitigating negative bias, and having a clear notion of the targeted group is necessary, it is not always practical. In this work we extrapolate to a broader notion of bias, rooted in social science and psychology literature. We move towards predicting interpersonal group relationship (IGR) - modeling the relationship between the speaker and the target in an utterance - using fine-grained interpersonal emotions as an anchor. We build and release a dataset of English tweets by US Congress members annotated for interpersonal emotion - the first of its kind, and {`}found supervision{'} for IGR labels; our analyses show that subtle emotional signals are indicative of different biases. While humans can perform better than chance at identifying IGR given an utterance, we show that neural models perform much better; furthermore, a shared encoding between IGR and interpersonal perceived emotion enabled performance gains in both tasks.",
+    url = "https://aclanthology.org/2023.eacl-main.183"
 }
 
 @inproceedings{venkat2020advice,
@@ -55,22 +49,16 @@
     booktitle = {Proceedings of the 2020 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
     month = nov,
     year = {2020},
-    address = {Online},
-    publisher = {Association for Computational Linguistics},
     url = {https://aclanthology.org/2020.emnlp-main.427},
     doi = {10.18653/v1/2020.emnlp-main.427},
-    pages = {5295--5306},
-    abstract = {Humans use language to accomplish a wide variety of tasks - asking for and giving advice being one of them. In online advice forums, advice is mixed in with non-advice, like emotional support, and is sometimes stated explicitly, sometimes implicitly. Understanding the language of advice would equip systems with a better grasp of language pragmatics; practically, the ability to identify advice would drastically increase the efficiency of advice-seeking online, as well as advice-giving in natural language generation systems. We present a dataset in English from two Reddit advice forums - r/AskParents and r/needadvice - annotated for whether sentences in posts contain advice or not. Our analysis reveals rich linguistic phenomena in advice discourse. We present preliminary models showing that while pre-trained language models are able to capture advice better than rule-based systems, advice identification is challenging, and we identify directions for future research.},
 }
 
 @article{genericity,
     author = {Govindarajan, Venkata and Durme, Benjamin Van and White, Aaron Steven},
     author+an = {1=highlight},
     title = {\href{https://doi.org/10.1162/tacl_a_00285}{Decomposing Generalization: Models of Generic , Habitual, and Episodic Statements}},
-    journal = {Transactions of the Association for Computational Linguistics (TACL)},
+    journal = {Transactions of the ACL (TACL)},
     volume = {7},
     number = {},
-    pages = {501-517},
     year = {2019},
-    abstract = { We present a novel semantic framework for modeling linguistic expressions of generalization— generic, habitual, and episodic statements—as combinations of simple, real-valued referential properties of predicates and their arguments. We use this framework to construct a dataset covering the entirety of the Universal Dependencies English Web Treebank. We use this dataset to probe the efficacy of type-level and token-level information—including hand-engineered features and static (GloVe) and contextual (ELMo) word embeddings—for predicting expressions of generalization. },
 }
