putting resume back

--- a/sections/awards.tex
+++ b/sections/awards.tex
@@ -6,5 +6,7 @@ Silver medal at International Genetically Engineered Machine (iGEM) \hfill Fall 
 
 Indian Biological Engineering Competition (iBEC) grant (15,000 USD) \hfill Fall 2016
 
+National BIRAC-IdeaThon on Antimicrobial Resistance Finalist \hfill Fall 2016
+
 Second runner up in 3M-CII Young Innovators Challenge \hfill Spring 2015
 
