--- a/sections/work_experience.tex
+++ b/sections/work_experience.tex
@@ -1,4 +1,4 @@
-\cventry{Data Scientist Intern}
+\cventry{Data Science Intern}
   {The New York Times}{Summer 2023}{}{Built a framework using hierarchical linear modeling for offline evaluation of novel user and article features to inform model building in algorithmic recommendations. Predicted that potential features like EASE would \textbf{boost engagement up-to 2\%} while diversifying recommendations.}
 
 
