--- a/sections/coursework.tex
+++ b/sections/coursework.tex
@@ -1,3 +1,1 @@
-Machine Learning $\bullet$ Statistical Speech and Language Processing $\bullet$ Natural Language Processing
-
-% \cvitem{}{Language and Power $\bullet$ Syntax $\bullet$ Formal Semantics $\bullet$ Introduction to Pragmatics $\bullet$ Morphology $\bullet$ Machine Learning $\bullet$ Statistical Speech and Language Processing $\bullet$ Logical Foundations of AI $\bullet$ Natural Language Processing $\bullet$ Principles of Neuroscience $\bullet$ Probability,Statistics and Stochastic Processes $\bullet$ Applied Statistics $\bullet$ Data Structures and Algorithms for Biology $\bullet$ Analysis and Interpretation of Biological Data}
+Machine Learning, Natural Language Processing, Natural Language Generation \& Discourse Processing, Logical Foundations of Artificial Intelligence, Statistical Speech Processing
