--- a/sections/education.tex
+++ b/sections/education.tex
@@ -1,7 +1,7 @@
 \cventry{Ph.D. Computational Linguistics}{The University of Texas at Austin}
-    {2019--2024}{\rmsc GPA: 3.92/4}{}
+    {2019--2024}{GPA: 3.92/4}{}
 
 \cventry{M.S. Computational Linguistics}{University of Rochester}
-    {2017--2019}{\rmsc GPA: 3.75/4}{}
+    {2017--2019}{GPA: 3.75/4}{}
 
-\cventry{B.Tech \& M.Tech Biological Engineering}{Indian Institute of Technology Madras}{2012--2017}{\rmsc GPA: 8.68/10}{}
+\cventry{B.Tech \& M.Tech Biological Engineering}{Indian Institute of Technology Madras}{2012--2017}{GPA: 8.68/10}{}
