--- a/sections/professional_service.tex
+++ b/sections/professional_service.tex
@@ -1,9 +1,9 @@
 \subsection{Organizing Committee}
 
-\quad \href{https://sites.utexas.edu/sxsemantics}{South by Semantics Workshop} 2022 -- 2023 with \href{https://www.cantwolf.com}{Samuel Cantor}.
+\quad \href{https://sites.utexas.edu/sxsemantics}{South by Semantics Workshop} 2022 -- 2023.
 
 \quad Texas Linguistics Society (TLS) Conference \href{http://tls.ling.utexas.edu/2022/}{2022} \& \href{http://tls.ling.utexas.edu/2021/}{2021}.
 
 \subsection{Reviewer}
 
-\quad ACL ARR 2023, EMNLP 2023, ACL 2023, *SEM 2023, SIGDIAL 2022, 2023
+\quad ACL ARR 2023, EMNLP 2023, ACL 2023, *SEM 2023, 2024, SIGDIAL 2022, 2023
