--- a/sections/work_experience.tex
+++ b/sections/work_experience.tex
@@ -1,5 +1,5 @@
 \cventry{Data Science Intern}
-  {The New York Times}{Summer 2023}{}{Built a framework using hierarchical linear modeling for offline evaluation of novel user and article features to inform model building in algorithmic recommendations. Predicted that potential features like EASE would \textbf{boost engagement up-to 2\%} while diversifying recommendations.}
+  {The New York Times}{Summer 2023}{}{Built a framework using hierarchical (mixed effects) linear modeling for offline evaluation of novel user and article features to inform model building in algorithmic recommendations. Delivered potential features that could \textbf{boost engagement up-to 2\%} while diversifying recommendations.}
 
 
 \cventry{Alexa Applied Scientist Intern}
