removed phone number

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -7,7 +7,7 @@
 \name{Venkata\space S}{Govindarajan}
 \title{He/Him/His\\Department of Linguistics,\\The University of Texas at Austin}
 \email{gvenkata1994@gmail.com}
-\phone{(512)568-8775}
+\homepage{venkatasg.net}
 \github{venkatasg}
 \linkedin{gvenkatas}
 
