--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,13 +1,15 @@
-@inproceedings{govindarajan-et-al-2023-babylm,
-    author = {Govindarajan, Venkata S and Rodriguez, Juan Diego and Bostrom, Kaj and Mahowald, Kyle},
-    author+an = {1=highlight},
-    title = {\href{https://arxiv.org/abs/2310.17591}{Lil-{B}evo: {E}xplorations of {S}trategies for {T}raining {L}anguage {M}odels in {M}ore {H}umanlike {W}ays}},
-    booktitle = {Proceedings of the {B}aby{LM} {C}hallenge},
-    year = {2023},
-    month = {December},
-    publisher = {Association for Computational Linguistics (ACL)},
+@inproceedings{govindarajan-etal-2023-lil,
+    title = "\href{https://aclanthology.org/2023.conll-babylm.27}{Lil-Bevo: Explorations of Strategies for Training Language Models in More Humanlike Ways}",
+    author = "Govindarajan, Venkata S  and
+      Rodriguez, Juan Diego  and
+      Bostrom, Kaj  and
+      Mahowald, Kyle",
+    booktitle = "Proceedings of the BabyLM Challenge at the 27th Conference on Computational Natural Language Learning",
+    month = dec,
+    year = "2023",
+    address = "Singapore",
+    publisher = "Association for Computational Linguistics (ACL)",
 }
-
 @inproceedings{govindarajan-etal-2023-counterfactual,
     title = "\href{https://aclanthology.org/2023.findings-acl.813}{Counterfactual Probing for the Influence of Affect and Specificity on Intergroup Bias}",
     author = "Govindarajan, Venkata Subrahmanyan  and
