Major changes going into job hunt season. - Headings font is Concourse 4, main sans font still concourse 3 with sansclight for the sansc version of that. - Pronouns moved to side. - cventry table spacing modified and rejigged a little bit. - deleted unnecessary stuff.

--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -5,9 +5,9 @@
 
 % personal data
 \name{Venkata\space S}{Govindarajan}
-\title{He/Him/His\\Department of Linguistics,\\The University of Texas at Austin}
+\title{Department of Linguistics,\\The University of Texas at Austin}
+\pronouns{he/him/his}
 \email{gvenkata1994@gmail.com}
-\homepage{venkatasg.net}
 \github{venkatasg}
 \linkedin{gvenkatas}
 
@@ -22,7 +22,7 @@
 \input{sections/education.tex}
 
 \section{Employment}
-\input{sections/work_experience.tex}
+\input{sections/employment.tex}
 
 \printbibliography[title=Select Publications]
 
