updates to skills and personal statement

--- a/sections/personal_statement.tex
+++ b/sections/personal_statement.tex
@@ -1,2 +1,2 @@
-I am a Ph.D. candidate at UT Austin studying intergroup bias in online communication. I have 5+ years of experience in \textbf{Natural Language Processing} (NLP) including large language models, and am interested in  \textbf{Machine Learning} or \textbf{Data Science} roles \emph{starting in May 2024}.
+I am a Ph.D. candidate at UT Austin studying intergroup bias in online communication. I have 5+ years of experience in \textbf{Natural Language Processing} (NLP) including large language models, and am interested in  \textbf{Machine Learning} or \textbf{Data Science} roles \emph{beginning June 1 2024}.
 
