--- a/sections/skills.tex
+++ b/sections/skills.tex
@@ -1,5 +1,5 @@
 \cvitem{Programming Languages}{Python, Swift, Javascript, R, SQL, Julia, LISP}
 
-\cvitem{Tools \& Frameworks}{pyTorch, Transformers, Tensorflow, Keras, scikit-learn, statsmodels, SciPy, Pandas, SwiftUI, CoreML, BigQuery, lme4}
+\cvitem{Tools \& Frameworks}{git, pyTorch, Transformers, Tensorflow, Keras, scikit-learn, statsmodels, SciPy, Pandas, SwiftUI, CoreML, Google Cloud Platform (GCP), BigQuery, lme4, Weights \& Biases}
 
 \cvitem{Languages}{English (native), Tamil (native), Hindi (intermediate)}
