--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -15,28 +15,22 @@
 
 \makecvtitle
 
-\section{Personal Statement}
-\input{sections/personal_statement.tex}
+\section{Employment}
+\input{sections/employment.tex}
 
 \section{Education}
 \input{sections/education.tex}
 
-\section{Employment}
-\input{sections/employment.tex}
-
-\printbibliography[title=Select Publications]
+\section{Apps \& Projects}
+\input{sections/apps.tex}
 
 \section{Skills}
 \input{sections/skills.tex}
 
-\section{Relevant Coursework}
-\input{sections/coursework.tex}
-
-\section{Apps}
-\input{sections/apps.tex}
+\printbibliography[title=Select Publications]
 
 \section{Professional Service}
-\input{sections/professional_service.tex}
+\input{sections/service.tex}
 
 \section{Awards}
 \input{sections/awards.tex}
