--- a/sections/employment.tex
+++ b/sections/employment.tex
@@ -1,3 +1,6 @@
+\cventry{Assistant Professor of Computer Science}
+  {Ithaca College}{Fall 2024--Present}{}{}
+  
 \cventry{Data Science Intern}
   {The New York Times}{Summer 2023}{}{Built a framework using mixed effects linear modeling for offline evaluation of novel user and article features to inform model building in algorithmic recommendations. Delivered potential features that could \textbf{boost engagement up-to 2\%} while diversifying recommendations.}
 
