--- a/sections/service.tex
+++ b/sections/service.tex
@@ -6,4 +6,4 @@
 
 \subsection{Reviewer}
 
-\quad ACL ARR 2023, EMNLP 2023, ACL 2023, *SEM 2023--24, SIGDIAL 2022--23
+\quad ACL ARR 2023--present, EMNLP 2023, ACL 2023, *SEM 2023--24, SIGDIAL 2022--23
