--- a/Venkat_Résumé.tex
+++ b/Venkat_Résumé.tex
@@ -5,7 +5,7 @@
 
 % personal data
 \name{Venkata\space S}{Govindarajan}
-\title{Department of Linguistics,\\The University of Texas at Austin}
+\title{Department of Computer Science,\\Ithaca College}
 \pronouns{he/him/his}
 \email{gvenkata1994@gmail.com}
 \github{venkatasg}
