updated with new paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,19 @@
+@inproceedings{govindarajan-etal-2024-mean,
+    title = "\href{https://aclanthology.org/2024.findings-emnlp.571}{Do *they* mean {`}us{'}? Interpreting Referring Expression variation under Intergroup Bias}",
+    author = "Govindarajan, Venkata S  and
+      Zang, Matianyu  and
+      Mahowald, Kyle  and
+      Beaver, David  and
+      Li, Junyi Jessy",
+    author+an = {1=highlight},
+    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2024",
+    month = nov,
+    year = "2024",
+    address = "Miami",
+    url = "https://aclanthology.org/2024.findings-emnlp.571",
+    doi = "10.18653/v1/2024.findings-emnlp.571",
+}
+
 @inproceedings{govindarajan-etal-2023-lil,
     title = "\href{https://aclanthology.org/2023.conll-babylm.27}{Lil-Bevo: Explorations of Strategies for Training Language Models in More Humanlike Ways}",
     author = "Govindarajan, Venkata S  and
@@ -9,19 +25,6 @@
     year = "2023",
     address = "Singapore",
     publisher = "Association for Computational Linguistics (ACL)",
-}
-@inproceedings{govindarajan-etal-2023-counterfactual,
-    title = "\href{https://aclanthology.org/2023.findings-acl.813}{Counterfactual Probing for the Influence of Affect and Specificity on Intergroup Bias}",
-    author = "Govindarajan, Venkata Subrahmanyan  and
-      Beaver, David  and
-      Mahowald, Kyle  and
-      Li, Junyi Jessy",
-    author+an = {1=highlight},
-    booktitle = "Findings of the ACL: ACL 2023",
-    month = jul,
-    year = "2023",
-    address = "Toronto, Canada",
-    url = "https://aclanthology.org/2023.findings-acl.813",
 }
 
 @inproceedings{govindarajan-etal-2023-people,
